--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/login.css">
+
+    <!-- jQuery CDN Link -->
+    <script src="/assets/jquery/jquery-3.6.0.min.js"></script>
+    <title>Transparent form</title>
 </head>
+
 <body>
-  <h1>Login page</h1>
+    <div class="container">
+        <div class="form">
+            <div class="btn">
+                <button class="signUpBtn">SIGN UP</button>
+                <button class="loginBtn">LOG IN</button>
+            </div>
+            <form class="signUp" action="" method="get">
+                <div class="formGroup">
+                    <input type="text" id="usernameReg" placeholder="User Name" autocomplete="off">
+                </div>
+                <div class="formGroup">
+                    <input type="email" placeholder="Email ID" name="email" required autocomplete="off">
+                </div>
+                <div class="formGroup">
+                    <input type="password" id="passwordReg" placeholder="Password" required autocomplete="off">
+                </div>
+                <div class="formGroup">
+                    <input type="password" id="rePasswordReg" placeholder="Confirm Password" required autocomplete="off">
+                </div>
+                <div class="checkBox">
+                    <input type="checkbox" name="checkbox">
+                    <span class="text">I agree with term & conditions</span>
+                </div>
+                <div class="formGroup">
+                    <button type="button" class="btn2">REGISTER</button>
+                </div>
+
+            </form>
+
+            <!------ Login Form -------- -->
+            <form class="login" action="" method="get">
+
+                <div class="formGroup">
+                    <input type="email" placeholder="Email ID" id="usernameLog" name="usernameLog" required autocomplete="off">
+                </div>
+                <div class="formGroup">
+                    <input type="password" id="passwordLog" placeholder="Password" required autocomplete="off">
+
+                </div>
+                <div class="checkBox">
+                    <input type="checkbox" name="checkbox">
+                    <span class="text">Keep me signed in on this device</span>
+                </div>
+                <div class="formGroup">
+                    <button type="button" id="btnLogin" class="btn2">LOGIN</button>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+
+    <script src="/assets/js/AppBase.js"></script>
+
+    <script>
+
+        const page = {
+            urls: {
+                authLogin: AppBase.API_AUTH + '/login'
+            },
+            elements: {},
+            loadData: {},
+            commands: {}
+        }
+
+
+        page.elements.usernameLog = $('#usernameLog');
+        page.elements.passwordLog = $('#passwordLog');
+        page.elements.btnLogin = $('#btnLogin');
+
+
+        /* Show login form on button click */
+
+        $('.loginBtn').click(function(){
+            $('.login').show();
+            $('.signUp').hide();
+            /* border bottom on button click */
+            $('.loginBtn').css({'border-bottom' : '2px solid #ff4141'});
+            /* remove border after click */
+            $('.signUpBtn').css({'border-style' : 'none'});
+        });
+
+
+        /* Show sign Up form on button click */
+
+        $('.signUpBtn').click(function(){
+            $('.login').hide();
+            $('.signUp').show();
+            /* border bottom on button click */
+            $('.signUpBtn').css({'border-bottom' : '2px solid #ff4141'});
+            /* remove border after click */
+            $('.loginBtn').css({'border-style' : 'none'});
+        });
+
+
+        page.elements.btnLogin.on('click', () => {
+            let username = page.elements.usernameLog.val();
+            let password = page.elements.passwordLog.val();
+
+            let obj = {
+                username,
+                password
+            }
+
+            $.ajax({
+                headers: {
+                    'accept': 'application/json',
+                    'content-type': 'application/json'
+                },
+                type: 'POST',
+                url: page.urls.authLogin,
+                data: JSON.stringify(obj)
+            })
+                .done((data) => {
+                    console.log(data);
+                    location.href = "/customers";
+                })
+                .fail((jqXHR) => {
+                    console.log(jqXHR);
+                })
+        })
+
+        $(() => {
+
+        })
+
+    </script>
+
 </body>
+
 </html>
