--- a/src/main/resources/templates/customer/modal_create.html
+++ b/src/main/resources/templates/customer/modal_create.html
@@ -12,34 +12,64 @@
                     <div class="modal-alert-danger hide"></div>
                     <form id="frmCreateCustomer">
                         <fieldset class="row g-3">
-                            <div class="col-md-4">
-                                <label class="form-label">Full name</label>
-                                <input type="text" class="form-control" id="fullNameCre" name="fullNameCre">
+                            <div class="col-lg-7">
+                                <div class="col-md-12">
+                                    <label class="form-label">Full name</label>
+                                    <input type="text" class="form-control" id="fullNameCre" name="fullNameCre">
+                                </div>
+                                <div class="col-md-12">
+                                    <label class="form-label">Email</label>
+                                    <input type="text" class="form-control" id="emailCre" name="emailCre">
+                                </div>
+                                <div class="col-md-12">
+                                    <label class="form-label">Phone</label>
+                                    <input type="tel" class="form-control" id="phoneCre" name="phoneCre">
+                                </div>
+                                <div class="col-md-6" style="float: left;">
+                                    <label class="form-label">Province</label>
+                                    <select class="form-select" id="provinceCre" name="provinceCre"></select>
+                                </div>
+                                <div class="col-md-6" style="float: left;">
+                                    <label class="form-label">District</label>
+                                    <select class="form-select" id="districtCre" name="districtCre"></select>
+                                </div>
+                                <div class="col-md-6" style="float: left;">
+                                    <label class="form-label">Ward</label>
+                                    <select class="form-select" id="wardCre" name="wardCre"></select>
+                                </div>
+                                <div class="col-md-6" style="float: left;">
+                                    <label class="form-label">Address</label>
+                                    <input type="text" class="form-control" id="addressCre" name="addressCre">
+                                </div>
                             </div>
-                            <div class="col-md-4">
-                                <label class="form-label">Email</label>
-                                <input type="text" class="form-control" id="emailCre" name="emailCre">
+                            <div class="col-lg-5">
+                                <section>
+                                    <div class="wrapper active">
+                                        <div class="image-preview">
+                                            <canvas id="canvas" style="display: none;"></canvas>
+                                        </div>
+                                        <div class="content">
+                                            <div class="icon">
+                                                <i class="fas fa-cloud-upload-alt"></i>
+                                            </div>
+                                            <div class="text">
+                                                No file chosen, yet!
+                                            </div>
+                                            <div class="text">
+                                                Max file size = 2MB
+                                            </div>
+                                        </div>
+                                        <div class="clear-image-preview">
+                                            <i class="fas fa-times"></i>
+                                        </div>
+                                        <div class="file-name">
+                                            Change image
+                                        </div>
+                                    </div>
+                                    <input type="file" id="imageFile" accept="image/jpeg, image/png" hidden="">
+                                </section>
                             </div>
-                            <div class="col-md-4">
-                                <label class="form-label">Phone</label>
-                                <input type="tel" class="form-control" id="phoneCre" name="phoneCre">
-                            </div>
-                            <div class="col-md-3">
-                                <label class="form-label">Province</label>
-                                <select class="form-select" id="provinceCre" name="provinceCre"></select>
-                            </div>
-                            <div class="col-md-3">
-                                <label class="form-label">District</label>
-                                <select class="form-select" id="districtCre" name="districtCre"></select>
-                            </div>
-                            <div class="col-md-3">
-                                <label class="form-label">Ward</label>
-                                <select class="form-select" id="wardCre" name="wardCre"></select>
-                            </div>
-                            <div class="col-md-3">
-                                <label class="form-label">Address</label>
-                                <input type="text" class="form-control" id="addressCre" name="addressCre">
-                            </div>
+
                         </fieldset>
                     </form>
                 </div>
